# senior-mortgage-underwriting-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Senior_Mortgage_Underwriting_System_Solution_Notebook.ipynb  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
data/: mortgage_test_cases.json  underwriting_policies.txt
deploy/aws/: deploy.sh  task-definition.json
scripts/: deploy_docker.sh  init_db.py  start_local.sh
src/agents/: asset_analyst.py  collateral_analyst.py  credit_analyst.py  critic.py  decision.py  income_analyst.py  supervisor.py
src/core/: compliance.py  config.py  llm.py  state.py
src/db/: models.py  repository.py
src/rag/: policy_store.py
src/tools/: calculators.py
src/ui/: pages.py
src/workflow/: graph.py
